add new page, test firebase

--- a/Views/Grobot/ManageGarden.cshtml
+++ b/Views/Grobot/ManageGarden.cshtml
@@ -5,8 +5,209 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Manage Your Garden</h2>
+
+<html>
+<head>
+
+    <meta name="viewport" content="width=device-width" />
+    <title>Manage Your Garden</title>
+
+    <script src="~/Scripts/jquery-1.11.3.min.js"></script>
+    <link href="~/Content/bootstrap-datepicker.min.css" rel="stylesheet" />
+    <style>
+        #dest {
+            animation-duration: 3s;
+        }
+
+        .SlowAnimation {
+            animation-duration: 3s;
+        }
+
+        .chartArea {
+            width: 75px;
+            height: 75px;
+        }
+
+        .sheen20 {
+            background-color: blue;
+            color: lawngreen;
+            font-weight: bolder;
+            text-align: center;
+        }
+
+        .sheen5 {
+            background-color: lawngreen;
+            color: blue;
+            font-weight: bolder;
+            text-align: center;
+        }
+
+        .sheenNone {
+            background-color: darkgrey;
+            color: white;
+            font-weight: bolder;
+            text-align: center;
+        }
+
+        .schedule {
+            font-size: 12px;
+        }
+
+        canvas {
+            -moz-user-select: none;
+            -webkit-user-select: none;
+            -ms-user-select: none;
+        }
+
+        .customDropDown {
+            z-index: 100;
+        }
+
+        .modal-lg-wider {
+            width: 70%;
+        }
+
+        .main {
+            margin-right: 50px;
+        }
+
+        .Green {
+            background-color: #3be26a;
+            color: white;
+        }
+
+        .GreenText {
+            color: #3be26a;
+        }
+
+        .Red {
+            background-color: #f70919;
+            color: white;
+        }
+
+        .RedText {
+            color: #f70919;
+        }
+
+        .DashboardTitles {
+            background-color: #707372;
+            color: white;
+        }
+
+        .breakoutTotal {
+            background-color: lightgray;
+            color: black;
+            border-color: #707372 !important;
+        }
+
+        .panel-default > .panel-heading {
+            color: white;
+            background-color: #707372;
+            border-color: #ddd;
+        }
+
+        .canvasSize {
+            height: 350px;
+        }
+
+        .yearlyTotals {
+            border-color: #707372 !important;
+        }
+    </style>
+</head>
+
+<body>
+    <!--Modal to add new tool-->
+    <div class="modal fade" id="myCyclesModal" style="z-index:299999;" tabindex="-1" role="dialog" aria-labelledby="myCyclesModalLabel">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myCyclesModalLabel">Tool Cycle Tracking</h4>
+                </div>
+                <div class="modal-body well-sm">
+                    <div id="stuffToolUI">put stuff here</div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <h2>Manage Your Garden</h2>
+    <hr />
+
+    <!--Form to input tool's field values, the field list is different for different types-->
+    <form id="YourGardenForm" @*style="margin-left: 2em"*@ autocomplete="off">
+
+        <input type="text" id="name">
+        <input type="text" id="mobile">
+        <input type="text" id="email">
+
+        <button type="button" id="button" onclick="addLead()">Submit</button>
+
+    </form>
+    <hr />
+
+    @section scripts
+    {
+
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-app.js"></script>
+
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-analytics.js"></script>
 
 
+        <script src="~/Scripts/bootstrap-datetimepicker.js"></script>
+        <script type="text/javascript">
+            // Your web app's Firebase configuration
+            var firebaseConfig = {
+                apiKey: "AIzaSyDyfux6x3mSdLAdN4iUKwY3hbwVQgcJzkc",
+                authDomain: "grobot-senior-project.firebaseapp.com",
+                databaseURL: "https://grobot-senior-project.firebaseio.com",
+                projectId: "grobot-senior-project",
+                storageBucket: "grobot-senior-project.appspot.com",
+                messagingSenderId: "4861335288",
+                appId: "1:4861335288:web:4a693f13f1a51e62b78d0d",
+                measurementId: "G-M5TGYRGJ4X"
+            };
+            // Initialize Firebase
+            firebase.initializeApp(firebaseConfig);
+            firebase.analytics();
+            var database = firebase.database();
+
+            function addLead() {
+                var clientName = document.getElementById('name').value;
+                var clientMobile = document.getElementById('mobile').value;
+                var clientEmail = document.getElementById('email').value;
+
+                var newClientKey = database.ref().child('leads').push().key;
+                database.ref('MyGarden/'+newClientKey+'/name').set(clientName);
+                database.ref('MyGarden/'+newClientKey+'/mobile').set(clientMobile);
+                database.ref('MyGarden/' + newClientKey + '/email').set(clientEmail);
+                alert("Hey")
+
+                reloadPage();
+            }
+
+            function reloadPage() {
+                var locPage = "/Grobot/ManageGarden";
+                window.location.href = locPage;
+            }
+
+
+            $(document).ready(function () {
+
+            })
+        </script>
+
+
+    }
+
+</body>
+</html>
 
 
