--- a/Views/Grobot/CreateGarden.cshtml
+++ b/Views/Grobot/CreateGarden.cshtml
@@ -152,9 +152,9 @@
             <div class="col-lg-4">
                 @Html.DropDownListFor(m => m.plantTypeID, new SelectList(Model._PlantTypeList, "plantTypeID", "plantTypeName"), "Select type of plant", new { @class = "form-control" })
                 @*<div class="form-inline">
-                    <input type="text" name="newPlantType" class="form-control" placeholder="Add New Plant Type..."/>
-                    <button class="btn btn-primary" id="AddTypeBtn">Save</button>
-                </div>*@
+                        <input type="text" name="newPlantType" class="form-control" placeholder="Add New Plant Type..."/>
+                        <button class="btn btn-primary" id="AddTypeBtn">Save</button>
+                    </div>*@
 
             </div>
         </div>
@@ -230,6 +230,31 @@
 
     @section scripts
     {
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-app.js"></script>
+
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+             https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-analytics.js"></script>
+
+        <script>
+            // Your web app's Firebase configuration
+            var firebaseConfig = {
+                apiKey: "AIzaSyDyfux6x3mSdLAdN4iUKwY3hbwVQgcJzkc",
+                authDomain: "grobot-senior-project.firebaseapp.com",
+                databaseURL: "https://grobot-senior-project.firebaseio.com",
+                projectId: "grobot-senior-project",
+                storageBucket: "grobot-senior-project.appspot.com",
+                messagingSenderId: "4861335288",
+                appId: "1:4861335288:web:4a693f13f1a51e62b78d0d",
+                measurementId: "G-M5TGYRGJ4X"
+            };
+            // Initialize Firebase
+            firebase.initializeApp(firebaseConfig);
+            firebase.analytics();
+        </script>
+
+
         <script src="~/Scripts/bootstrap-datetimepicker.js"></script>
         <script type="text/javascript">
             $('#CreateNewGarden').click(function () {
